--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "opensource@10up.com"
         },
         {
-            "name": "Helen Hpu-Sandi",
+            "name": "Helen Hou-Sandi",
             "email": "helen@10up.com"
         },
         {
