Try using a PHP version matrix
Since this is supposed to be 5.3+ let's try testing in 5.6 too anyway.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   test_php:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-versions: ['5.6', '7.3']
     
     steps:
     - name: Checkout
