--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Install dependencies
       run: composer install
+    - name: PHP version
+      run: php --version
     - name: Run PHPCS
       run: composer run lint
