Add permission flag

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
     "scripts": {
         "lint": "vendor/bin/phpcs --standard=WordPress *.php inc/*.php",
         "lint-fix": "vendor/bin/phpcbf --standard=WordPress *.php inc/*.php"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
