--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.3.0",
   "description": "Create, manage, and validate your ads.txt and app-ads.txt from within WordPress, just like any other content asset.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress:open": "cypress open --config-file tests/cypress/config.json",
+    "cypress:run": "cypress run --config-file tests/cypress/config.json",
+    "wp-env": "wp-env"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/10up/ads-txt.git"
   },
   "author": {
-	"name": "10up",
+    "name": "10up",
     "email": "opensource@10up.com",
     "url": "https://10up.com",
     "role": "developer"
@@ -19,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/10up/ads-txt/issues"
   },
-  "homepage": "https://github.com/10up/ads-txt"
+  "homepage": "https://github.com/10up/ads-txt",
+  "devDependencies": {
+    "@wordpress/env": "^4.2.1",
+    "cypress": "^9.4.1",
+    "cypress-file-upload": "^5.0.8"
+  }
 }
