--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - develop
+      - test/79
 jobs:
   test_php:
     name: Test PHP
@@ -29,3 +30,24 @@ jobs:
       run: composer install --ignore-platform-reqs
     - name: Run PHPCS
       run: composer run lint
+  
+  cypress:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        core:
+          - {name: 'WP latest', version: 'latest'}
+          - {name: 'WP trunk', version: 'WordPress/WordPress#master'}
+          - {name: 'WP minimum', version: 'WordPress/WordPress#4.9'}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install dependencies
+      run: npm i && composer install --no-dev
+    - name: Set the core version
+      run: ./tests/bin/set-core-version.js ${{ matrix.core.version }}
+    - name: Set up WP environment
+      run: npm run wp-env start
+    - name: Test
+      run: npm run cypress:run
