--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,8 @@ jobs:
       matrix:
         core:
           - {name: 'WP latest', version: 'latest'}
-#          - {name: 'WP trunk', version: 'WordPress/WordPress#master'}
-#          - {name: 'WP minimum', version: 'WordPress/WordPress#4.9'}
+          - {name: 'WP trunk', version: 'WordPress/WordPress#master'}
+          - {name: 'WP minimum', version: 'WordPress/WordPress#4.9'}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -48,5 +48,7 @@ jobs:
       run: ./tests/bin/set-core-version.js ${{ matrix.core.version }}
     - name: Set up WP environment
       run: npm run wp-env start
+    - name: Set permalinks structure
+      run: npm run wp-env run tests-cli "wp rewrite structure '/%postname%/'"
     - name: Test
       run: npm run cypress:run
