--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,8 +47,6 @@ jobs:
     - name: Set the core version
       run: ./tests/bin/set-core-version.js ${{ matrix.core.version }}
     - name: Set up WP environment
-      run: npm run wp-env start
-    - name: Set permalinks structure
-      run: npm run wp-env run tests-cli "wp rewrite structure '/%postname%/'"
+      run: npm run env:start
     - name: Test
       run: npm run cypress:run
