--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "cypress:open": "cypress open --config-file tests/cypress/config.json",
     "cypress:run": "cypress run --config-file tests/cypress/config.json",
-    "wp-env": "wp-env"
+    "wp-env": "wp-env",
+    "env:start": "wp-env start",
+    "env:stop": "wp-env stop",
+    "postenv:start": "./tests/bin/initialize.sh"
   },
   "repository": {
     "type": "git",
