--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-/.wordpress-org export-ignore
 /.github export-ignore
+/.wordpress-org export-ignore
 /node_modules export-ignore
 /tests export-ignore
 /vendor export-ignore
@@ -7,6 +7,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.wp-env.json export-ignore
+/.wp-env.override.json export-ignore
 /CHANGELOG.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /composer.json export-ignore
