--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - develop
+  push:
+    branches:
+      - test/wp-env-version
 jobs:
   cypress:
     name: E2E Tests
@@ -12,6 +15,8 @@ jobs:
       matrix:
         core:
           - {name: 'WP latest', version: 'latest'}
+          - {name: 'WP minimum', version: 'WordPress/WordPress#4.9'}
+          - {name: 'WP nighty', version: 'WordPress/WordPress#master'}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
