--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,7 @@
       ],
     "type": "wordpress-plugin",
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5",
-        "wp-coding-standards/wpcs": "^2.1",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+		"10up/phpcs-composer": "dev-master"
     },
     "license": "GPLv2 or later",
     "scripts": {
