--- a/.github/workflows/php8-compatibility.yml
+++ b/.github/workflows/php8-compatibility.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ '5.3', '5.4', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: [ '5.3', '5.4', '5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1' ]
 
     steps:
     - name: Checkout
