--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
         "wp-coding-standards/wpcs": "^2.1",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+        "phpunit/phpunit": "^9.5",
+        "10up/wp_mock": "^0.4.2"
     },
     "license": "GPLv2 or later",
     "scripts": {
