--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -48,10 +48,7 @@ jobs:
         tools: composer:v2
 
     - name: Install dependencies
-      run: composer install && npm install
+      run: composer install
     
-    - name: Build
-      run: npm run build
-
     - name: Test
       run: ./vendor/bin/phpunit -v
