Update PHPCS workflow command to pass on PHP 5

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Install dependencies
       run: composer install --ignore-platform-reqs
     - name: Run PHPCS
-      run: composer run lint
+      run: ./vendor/bin/phpcs --standard=WordPress *.php inc/*.php
