--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.phpcs.xml.dist export-ignore
 /.wp-env.json export-ignore
 /.wp-env.override.json export-ignore
 /CHANGELOG.md export-ignore
