--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.phpcs.xml.dist export-ignore
+/.phpcompat.xml.dist export-ignore
 /.phpunit.result.cache export-ignore
 /.wp-env.json export-ignore
 /.wp-env.override.json export-ignore
