--- a/.github/workflows/lint-php.yml
+++ b/.github/workflows/lint-php.yml
@@ -28,4 +28,4 @@ jobs:
       run: composer install
 
     - name: Lint PHP
-      run: ./vendor/bin/phpcs -p
+      run: ./vendor/bin/phpcs -p --standard=.phpcs.xml.dist
