--- a/.github/workflows/php8-compatibility.yml
+++ b/.github/workflows/php8-compatibility.yml
@@ -15,13 +15,8 @@ on:
 
 jobs:
   php_compatibility:
-    name: PHP ${{ matrix.php }}
+    name: PHP minimum 7.4
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php: [ '7.4', '8.0', '8.1' ]
-
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -43,10 +38,10 @@ jobs:
       with:
         php-version: '7.4'
         coverage: none
-        tools: prestissimo, composer:v2
+        tools: composer:v2
 
     - name: Install dependencies
       run: composer install
 
     - name: Check PHP Compatibility
-      run: ./vendor/bin/phpcs -p ads-txt.php inc --standard=PHPCompatibilityWP --extensions=php --runtime-set testVersion ${{ matrix.php }}
+      run: ./vendor/bin/phpcs --standard=.phpcompat.xml.dist
