--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,12 +9,12 @@
 	verbose="true"
 >
 	<testsuites>
-		<testsuite name="Simple Podcasting">
+		<testsuite name="Ads.txt">
 			<directory prefix="test-" suffix=".php">./tests/unit</directory>
 		</testsuite>
 	</testsuites>
-    <php>
-        <ini name="display_errors" value="On" />
-        <ini name="display_startup_errors" value="On" />
-    </php>
+	<php>
+		<ini name="display_errors" value="On" />
+		<ini name="display_startup_errors" value="On" />
+	</php>
 </phpunit>
