--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -22,6 +22,7 @@ jobs:
       matrix:
         php:
           - {name: 'PHP 7.4', version: '7.4'}
+          - {name: 'PHP 8.0', version: '8.0'}
           - {name: 'PHP 8.1', version: '8.1'}
 
     steps:
