--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "@wordpress/env": "^5.7.0",
     "cypress": "^11.2.0",
     "cypress-file-upload": "^5.0.8"
+  },
+  "dependencies": {
+    "cypress-mochawesome-reporter": "^3.4.0"
   }
 }
