--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 /.phpcs.xml.dist export-ignore
 /.phpcompat.xml.dist export-ignore
 /.phpunit.result.cache export-ignore
+/.wordpress-version-checker.json export-ignore
 /.wp-env.json export-ignore
 /.wp-env.override.json export-ignore
 /CHANGELOG.md export-ignore
